--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,43 +1,7 @@
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-		<div id="qr-reader" style="width:500px"></div>
-		<div id="qr-reader-results"></div>
-		<a href="./new-york-times">New York Times</a>
-		<a href="./ai-revolution">AI revolution</a>
-	</body>
-</html>
+---
+import Layout from '~/layouts/App.astro'
+---
 
-<script>
-
-	import {Html5QrcodeScanner, Html5QrcodeScanType} from 'html5-qrcode';
-
-	function onScanSuccess(decodedText: any, decodedResult: any) {
-		// handle the scanned code as you like, for example:
-		console.log(`Code matched = ${decodedText}`, decodedResult);
-
-		// example
-		if (decodedText === 'ai-revolution') {
-			window.location.href = '/ai-revolution';
-		}
-	}
-
-	let config = {
-		fps: 10,
-		qrbox: {width: 300, height: 300},
-		rememberLastUsedCamera: true,
-		// Only support camera scan type.
-		supportedScanTypes: [Html5QrcodeScanType.SCAN_TYPE_CAMERA]
-	};
-
-	let html5QrcodeScanner = new Html5QrcodeScanner(
-	"qr-reader", config, /* verbose= */ false);
-	html5QrcodeScanner.render(onScanSuccess);
-</script>
+<Layout title="home">
+	<h1>Start browsing news sites below!</h1>
+</Layout>
