--- a/src/layouts/App.astro
+++ b/src/layouts/App.astro
@@ -27,6 +27,18 @@ import qrImg from '~/assets/qrcode.viewfinder.svg';
     </body>
 </html>
 
+<style is:global>
+    img{
+        width: 100%;
+        padding: 30px 0;
+    }
+    video {
+        margin: 0 auto;
+        display: block;
+        padding: 30px 0;
+    }
+</style>
+
 <style>
     #qr-overlay {
         position: fixed;
