--- a/src/layouts/App.astro
+++ b/src/layouts/App.astro
@@ -28,14 +28,31 @@ import qrImg from '~/assets/qrcode.viewfinder.svg';
 </html>
 
 <style is:global>
-    img{
+    article > img{
         width: 100%;
         padding: 30px 0;
     }
-    video {
+    article > video {
         margin: 0 auto;
         display: block;
         padding: 30px 0;
+    }
+
+    article > p {
+        /* entire width */
+        text-align: justify;
+    }
+
+    article {
+        font-family:'Times New Roman', Times, serif;
+        font-size: 20px;
+        margin-bottom: 200px;
+    }
+
+    h1 {
+        font-family: 'Courier New', Courier, monospace;
+        font-size: 48px;
+        border-bottom: 1px solid black;
     }
 </style>
 
