--- a/src/layouts/square.astro
+++ b/src/layouts/square.astro
@@ -4,7 +4,7 @@ import logo from '~/assets/square.jpeg'
 import { routes } from '~/js/routes';
 ---
 
-<App title="Cafe">
+<App title="The Square">
     <section>
         <header>
             <a href={routes.square}>
