layout minor changes

--- a/src/components/NewsCard.astro
+++ b/src/components/NewsCard.astro
@@ -24,7 +24,7 @@ import placeholderImg from '~/assets/article-placeholder.png';
 
 <style>
     .news-card {
-        margin: 15px 5px;
+        margin: 15px 0;
         padding-bottom: 10px;
         border: 1px solid black;
         display: block;
