--- a/src/layouts/App.astro
+++ b/src/layouts/App.astro
@@ -19,7 +19,7 @@ import qrImg from '~/assets/qrcode.viewfinder.svg';
     <body>
         <section id="qr-overlay">
             <button id="qr-overlay-close">x</button>
-            <h1>Scan new location</h1>
+            <h2>Scan new location</h2>
             <div id="qr-reader" style="width:500px"></div>
         </section>
         <slot />
@@ -28,7 +28,14 @@ import qrImg from '~/assets/qrcode.viewfinder.svg';
 </html>
 
 <style is:global>
-    article > img{
+    html, body {
+        margin: 0;
+        padding: 0;
+    }
+    body {
+        margin: 0 20px;
+    }
+    article > img {
         width: 100%;
         padding: 30px 0;
     }
@@ -39,7 +46,6 @@ import qrImg from '~/assets/qrcode.viewfinder.svg';
     }
 
     article > p {
-        /* entire width */
         text-align: justify;
     }
 
@@ -51,7 +57,7 @@ import qrImg from '~/assets/qrcode.viewfinder.svg';
 
     h1 {
         font-family: 'Courier New', Courier, monospace;
-        font-size: 48px;
+        font-size: 36px;
         border-bottom: 1px solid black;
     }
 </style>
